[package]
name = "brownian_walk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "brownian_walk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rand = "0.8"
rayon = "1.5"

[package.metadata.maturin]
rustflags = ["-C", "opt-level=3"]

